[gd_scene load_steps=3 format=3 uid="uid://bnhmv5bs0a1ki"]

[ext_resource type="Script" path="res://scenes/map/encounters/encounter.gd" id="1_q1gyq"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uya7u"]
size = Vector2(150, 150)

[node name="Encounter" type="Node2D"]
script = ExtResource("1_q1gyq")

[node name="MouseHoverDetection" type="Area2D" parent="."]
collision_layer = 256
collision_mask = 0

[node name="MouseHoverArea" type="CollisionShape2D" parent="MouseHoverDetection"]
shape = SubResource("RectangleShape2D_uya7u")

[connection signal="input_event" from="MouseHoverDetection" to="." method="_on_mouse_hover_detection_input_event"]
[connection signal="mouse_entered" from="MouseHoverDetection" to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="MouseHoverDetection" to="." method="_on_mouse_exited"]
